[package]
name = "vim-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vim_math"
crate-type = ["cdylib"]      # Creates dynamic lib

[dependencies]
miniserde = "0.1"
magick_rust = {version="0.15", features=["disable-hdri"]}
regex = "1.5.4"
sha2 = "0.10"
which = "4"
nix = "0.23"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
